[tool.poetry]
name = "stablediffusion-server-on-colab"
version = "0.1.0"
description = ""
authors = ["Hironao OTSUBO <motemen@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
Flask = "^2.2.2"
diffusers = "0.2.4"
transformers = "^4.21.2"
scipy = "^1.9.0"
ftfy = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
